--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">MAD255-WeatherApp</string>
+
+<!-- Weather UI strings -->
+    <string name="string_temp">%s°</string>
+    <string name="string_feels_like">feels like %s°</string>
+    <string name="string_max_min">max/min: %s° - %s°</string>
+    <string name="string_humidity">humidity: %s %%</string>
+    <string name="string_pressure">pressure: %s</string>
+
+<!-- Location UI strings -->
+    <string name="string_location"> %s, %s</string>
+
+<!-- UI strings -->
+    <string name="string_button_refresh">Refresh</string>
+    <string name="string_placeholder">-</string>
+    <string name="string_zip_enter">Enter Zip Code</string>
+
 </resources>
