--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 <!-- Weather UI strings -->
     <string name="string_temp">%s°</string>
     <string name="string_feels_like">feels like %s°</string>
-    <string name="string_max_min">max/min: %s° - %s°</string>
+    <string name="string_max_min">max/min: %s° to %s°</string>
     <string name="string_humidity">humidity: %s %%</string>
     <string name="string_pressure">pressure: %s</string>
 
